unpackaged/main/default/objects/fferpcore__UserInformationAssignment__c/fields/fferpcore__Status__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Status__c</fullName>
    <description>The status of the information to be applied to the Salesforce User.</description>
    <inlineHelpText>The status of the information to be applied to the Salesforce User.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Assignment</fullName>
                <default>true</default>
                <label>Pending Assignment</label>
            </value>
            <value>
                <fullName>Pending Removal</fullName>
            </value>
            <value>
                <fullName>Assigning</fullName>
            </value>
            <value>
                <fullName>Removing</fullName>
            </value>
            <value>
                <fullName>Failed to Assign</fullName>
            </value>
            <value>
                <fullName>Failed to Remove</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>