unpackaged/main/default/objects/fferpcore__UserInformationAssignment__c/fields/fferpcore__TemplateName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TemplateName__c</fullName>
    <description>Name of the User Management Template to be applied to the Salesforce User.</description>
    <inlineHelpText>Name of the User Management Template to be applied to the Salesforce User.</inlineHelpText>
    <label>Template Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>