unpackaged/main/default/objects/fferpcore__UserInformationAssignment__c/fields/fferpcore__UserInformation__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UserInformation__c</fullName>
    <description>User information to which this user information assignment belongs.</description>
    <inlineHelpText>User information to which this user information assignment belongs.</inlineHelpText>
    <label>User Information</label>
    <referenceTo>fferpcore__UserInformation__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>